Signed-off-by:ModHussain

--- a/partials/RA/RA.html
+++ b/partials/RA/RA.html
@@ -34,7 +34,7 @@
 	  <ul class="nav navbar-nav navbar-right">
 	   <li class="m-t-20"> 
 			   <select class="form-control" ng-options="reg for reg in register" ng-model="registerData" ng-change="dataregister()">
-				<option value="" disabled="">Register</option>
+				<option value="" disabled="">Switch To</option>
 			  </select>
 	  </li>
         <li ng-controller="LoginCtrl"><a href="#" ng-click="logout();"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
