--- a/partials/RA/postresourceById.html
+++ b/partials/RA/postresourceById.html
@@ -1,7 +1,7 @@
  <div class="container m-t-50">
                 <form class="form-inline text-center">
                     <div class="input-group">
-                    <input type="text" ng-model="search" class="form-control" size="50" placeholder="Search requirement" required>
+                    <input type="text" ng-model="search" class="form-control" size="50" placeholder="Search Here..." required>
                     <div class="input-group-btn">
                     <button type="button" class="btn btn-primary">Search</button>
                     </div>
