--- a/partials/customer/customer.html
+++ b/partials/customer/customer.html
@@ -10,7 +10,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a ui-sref=".dashboard">Dashboard</a></li>
-        <li><a ui-sref="">Registration</a></li>
+        <li><a ui-sref="customer.customerlist({userId:id})">Profile</a></li>
 		<li ng-show="{{all_users_type}}"><a ui-sref=".alluserlist">All User</a></li>
 		<li><a ui-sref=".postrequirement" >Post Requirement</a></li>
 		<li><a ui-sref=".resourceMap">Resource Map</a></li>
@@ -18,7 +18,7 @@
       <ul class="nav navbar-nav navbar-right">
       <li class="m-t-20"> 
       <select class="form-control" ng-options="reg for reg in register" ng-model="registerData" ng-change="dataregister()">
-		<option value="" disabled="">Register</option>
+		<option value="" disabled="">Switch To</option>
 	  </select>
 	  </li>
         <li ng-controller="LoginCtrl"><a href="#" ng-click="logout();"><span class="glyphicon glyphicon-log-in"></span> Logout</a></li>
